# freebox-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  fbx  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: amelioration.yml  bogue.yml  config.yml
.github/workflows/: ci.yml  deps.yml  release.yml
docs/: api-notes.md
recon/: doc_inventory.json  extract_doc.py  mirror_doc.py
scripts/: build_mcpb.py  generate_brew_formula.py  generate_docs_assets.py
skills/fbx/: SKILL.md
src/fbx/: __init__.py
src/fbx/cli/: __init__.py  main.py  ui.py
src/fbx/cli/commands/: __init__.py  api.py  app.py  auth.py  calls.py  connection.py  contacts.py  dhcp.py  downloads.py  fs.py  fw.py  lan.py  mcp.py  system.py  vm.py  wifi.py
src/fbx/core/: __init__.py  auth.py  client.py  cloudinit.py  credentials.py  discovery.py  envelope.py  errors.py  fspath.py  redaction.py  runtime.py  vmconsole.py
src/fbx/core/api/: calls.py  connection.py  contacts.py  dhcp.py  downloads.py  fs.py  fw.py  lan.py  share.py  system.py  vm.py  wifi.py
src/fbx/core/certs/: __init__.py
src/fbx/core/models/: __init__.py  auth.py  discovery.py
src/fbx/mcp/: __init__.py  enroll.py  registry.py  runtime.py  server.py
src/fbx/tui/: __init__.py  app.py  app.tcss  brand.py  fmt.py  i18n.py  locale_fr.py  oslaunch.py  prefs.py  suggestions.py  support.py  widgets.py
src/fbx/tui/screens/: __init__.py  _base.py  calls.py  connection.py  contacts.py  dashboard.py  dhcp.py  downloads.py  fs.py  fw.py  lan.py  splash.py  storage.py  system.py  top.py  vm.py  wifi.py
tests/: conftest.py  helpers.py  test_auth.py  test_calls.py  test_cli.py  test_client.py  test_connection.py  test_contacts.py  test_credentials.py  test_dhcp.py  test_discovery.py  test_downloads.py  test_fs.py  test_fs_shell.py  test_fw.py  test_i18n.py  test_lan.py  test_mcp.py  test_prefs.py  test_redaction.py  test_splash.py  test_system.py  test_tui.py  test_tui_lang.py  test_tui_screens.py  test_vm.py  test_vm_console.py  test_vm_details.py  test_wifi.py
