[project]
name = "fbx"
version = "0.5.1"
description = "Freebox Ultra CLI — manage your box, your network, and your VMs from the terminal"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kevin Gallaccio" }]
keywords = ["freebox", "freebox-ultra", "freebox-os", "cli", "router", "homelab"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "zeroconf>=0.132",
    "websockets>=13",
]

[project.urls]
Homepage = "https://github.com/KevinGallaccio/fbx"
Repository = "https://github.com/KevinGallaccio/fbx"

[project.optional-dependencies]
keyring = ["keyring>=25"]
mcp = ["mcp>=1.2"]
tui = ["textual>=0.60"]

[project.scripts]
fbx = "fbx.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fbx"]

[tool.hatch.build.targets.sdist]
include = ["src/fbx", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "ruff>=0.5",
    # The MCP server is an optional extra for users ([project.optional-dependencies]
    # mcp) but always present in dev so its tests run.
    "mcp>=1.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: Typer requires `= typer.Option(...)` / `typer.Argument(...)` in defaults.
# UP042: `str, Enum` is the deliberate, Typer-friendly choice-enum pattern.
ignore = ["B008", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
